# hexstrike_lab

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  README.zh-TW.md  SECURITY.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
ansible/: README.md  inventory.example.ini  playbook.yml  playbook_kali_full.yml
configs/: default.yaml  pentest_workflow.yaml  profiles.yaml  rfp_scan_requirements.yaml
docs/: CURSOR_PROMPT_PACK.md  DEPLOY_KALI.md  EXECUTION_LAYER.md  INSTRUCTOR_ANSWER_OUTLINE.md  INSTRUCTOR_PROMPT_GUIDE.md  RUNBOOK_KALI.md  TRACK_C_PENTEST.md
docs/instructor/: README.md  lab00.md  lab01.md  lab02.md  lab03.md  lab04.md  lab05.md  lab06.md  lab07.md  lab08.md  lab09.md  lab10.md  lab11.md  lab12.md  lab13.md  lab14.md  lab15.md
hexstrike_lab/: __init__.py  __main__.py
hexstrike_lab/adapters/: __init__.py  nikto.py  nmap.py  text_parsers.py
hexstrike_lab/cli/: main.py
hexstrike_lab/core/: __init__.py  config.py  evidence_schema.py  logging_setup.py  pentest_workflow.py  profiles.py  rfp_workflow.py  schema.py
hexstrike_lab/execution/: __init__.py  base.py  conditions.py  orchestrator.py  runner.py  targets.py
labs/: README.md
scripts/: run_full_pipeline.sh  verify_kali_lab_env.sh
tests/: test_adapter_normalize.py  test_conditions.py  test_config_load.py  test_evidence_schema.py  test_markdown_formatter.py  test_orchestrator.py  test_pentest_workflow.py  test_pipeline_cli.py  test_precheck.py  test_report_from_json.py  test_rfp_workflow.py  test_schema.py  test_shell_wrapper.py  test_targets.py
(+35 files in other folders)
